scss/_layout.scss
@use "variables" as *;

:root {
  --font-main: "Inter", sans-serif;
  --radius: 8px;
  --primary: #3b82f6;
  --accent: #3b82f6;
  --white: #ffffff;
  --text: #f1f5f9;
  --placeholder: #94a3b8;
  --background: #0f172a;
  --card: #1e293b;
  --input-bg: #334155;
  --grey: #64748b;
  --grey-light: #cbd5e1;
}

body.light-mode {
  --primary: #3b82f6;
  --accent: var(--primary);
  --white: #ffffff;
  --text: #0f172a;
  --placeholder: #94a3b8;
  --background: #64748b;
  --card: #ffffff;
  --input-bg: #334155;
  --grey: #64748b;
  --grey-light: #cbd5e1;

  /*

$primary: #3b82f6; //OK
$accent: $primary; //OK
$white: #ffffff;
$text: #f1f5f9; // #0f172a;
$placeholder: #94a3b8; //OK
$background: #0f172a; // #64748b;
$card: #1e293b; // #ffffff;
$input-bg: #334155;
$grey: #64748b; // OK
$grey-light: #cbd5e1; */
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-align: center;
}

body {
  font-family: var(--font-main);
  background-color: var(--background);
  color: var(--text);
  padding: 32px;
}

.app {
  max-width: 1440px;
  margin: auto;
  padding: 24px;
  background-color: var(--background);
  border-radius: var(--radius);
}

.main {
  display: flex;
  flex-direction: column;
  gap: 32px;
}

@media (max-width: 1040px) {
  .app {
    max-width: 1040px;
    padding: 12px;
  }
}

@media (max-width: 430px) {
  .app {
    max-width: 430px;
    padding: 8px;
  }
}

